Fixed footer connect but missing social links

--- a/appointment/index.html
+++ b/appointment/index.html
@@ -467,8 +467,10 @@
                                                     <option value="04:00 PM - 05:00 PM">04:00 PM - 05:00 PM</option>
                                                     <option value="05:00 PM - 06:00 PM">05:00 PM - 06:00 PM</option>
                                                 </select>
-                                            </div><label class=" box-header margin-bottom-20 page-margin-top">SELECT
-                                                SERVICES NEEDED</label>
+                                            </div>
+                                            <label class=" box-header margin-bottom-20 page-margin-top">
+                                                SELECT SERVICES NEEDED
+                                            </label>
                                             <div class="cost-calculator-box clearfix float"><input id="auto-body-repair"
                                                     class="cost-slider-input big type-checkbox" name="auto-body-repair"
                                                     type="checkbox" value="0" data-value="1" placeholder="">
