--- a/services/blackout-package/index.html
+++ b/services/blackout-package/index.html
@@ -421,17 +421,16 @@
                         <table class="margin-top-40">
                           <tbody>
                             <tr>
-                              <td>Dime Size</td>
-                              <td>$65</td>
+                              <td>4 Wheels</td>
+                              <td>$700</td>
                             </tr>
                             <tr>
-                              <td>Nickel Size</td>
-                              <td>$550</td>
+                              <td>4 Wheels & Exhaust Pipe</td>
+                              <td>$800</td>
                             </tr>
                             <tr>
-                              <td>Quarter Size</td>
-                              <td>$650</td>
-                            </tr>
+                              <td>4 Wheels & Exhaust Pipe & Emblems</td>
+                              <td>$1000</td>
                             </tr>
                           </tbody>
                         </table>
