--- a/services/camera-installation/index.html
+++ b/services/camera-installation/index.html
@@ -423,24 +423,12 @@
                         <table class="margin-top-40">
                           <tbody>
                             <tr>
-                              <td>Dime Size</td>
-                              <td>$65</td>
+                              <td>CH200</td>
+                              <td>$350 Installed</td>
                             </tr>
                             <tr>
-                              <td>Nickel Size</td>
-                              <td>$550</td>
-                            </tr>
-                            <tr>
-                              <td>Quarter Size</td>
-                              <td>$650</td>
-                            </tr>
-                            <tr>
-                              <td>Half Dollar Size</td>
-                              <td>$550</td>
-                            </tr>
-                            <tr>
-                              <td>Golf Ball Size</td>
-                              <td>$650</td>
+                              <td>KP100+</td>
+                              <td>$450 Installed</td>
                             </tr>
                           </tbody>
                         </table>
