--- a/services/matte-paint-special/index.html
+++ b/services/matte-paint-special/index.html
@@ -437,24 +437,8 @@
                                                 <table class="margin-top-40">
                                                     <tbody>
                                                         <tr>
-                                                            <td>Dime Size</td>
-                                                            <td>$65</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Nickel Size</td>
-                                                            <td>$550</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Quarter Size</td>
-                                                            <td>$650</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Half Dollar Size</td>
-                                                            <td>$550</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Golf Ball Size</td>
-                                                            <td>$650</td>
+                                                            <td>Full Car</td>
+                                                            <td>TBD (Depends on vehicle and color choice)</td>
                                                         </tr>
                                                     </tbody>
                                                 </table>
