--- a/index.html
+++ b/index.html
@@ -1035,10 +1035,10 @@
 							<li><span style="padding-left:30%;font-weight: bold;">E-mail:</span><a href="mailto:accidentprosusa@gmail.com">AccidentProsUSA@gmail.com</a></li>
 						</ul>
 						<ul class="social-icons gray margin-top-26 clearfix">
-							<li style="background-color: #3b5998;"><a target='_blank' href="#" class="social-facebook"></a></li>
-							<li style="background-color: #00aced;"><a target='_blank' href="#" class="social-twitter"></a></li>
-							<li><a target='_blank' href="#" class="social-instagram"></a></li>
-							<li><a target='_blank' href="#" class="social-yelp"></a></li>
+							<li style="background-color: #3b5998;"><a target='_blank' href="#" class="socials"><i class="fab fa-facebook-f"></i></a></li>
+							<li style="background-color: #00aced;"><a target='_blank' href="#" class="socials"><i class="fab fa-twitter"></i></a></li>
+							<li style="background-color: #e95950;"><a target='_blank' href="#" class="socials"><i class="fab fa-instagram"></i></a></li>
+							<li style="background-color: #c41200;"><a target='_blank' href="#" class="socials"><i class="fab fa-yelp"></i></a></li>
 						</ul>
 					</div>
 					<div class='vc_col-sm-3 wpb_column vc_column_container widget cs_contact_details_widget'>
