--- a/services/index.html
+++ b/services/index.html
@@ -400,6 +400,26 @@
                                                 RESTORATION</a></h4>
                                     </li>
                                 </div>
+                                <div class="vc_row wpb_row vc_row-fluid">
+                                    <li><a href="/services/blackout-package/" title="BLACKOUT PACKAGE"><img width="390"
+                                                height="260" src="/assets/pics/car_painting_3.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                alt="BLACKOUT PACKAGE" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+                                        <h4 class="box-header"><a href="/services/blackout-package/" title="BLACKOUT PACKAGE">BLACKOUT
+                                                PACKAGE</a></h4>
+                                    </li>
+                                    <li><a href="/services/camera-installation/" title="DASH CAM INSTALLATION"><img
+                                                width="390" height="260" src="/assets/pics/auto_detailing.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                alt="DASH CAM INSTALLATION" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+                                        <h4 class="box-header"><a href="/services/camera-installation/" title="DASH CAM INSTALLATION">DASH
+                                                CAM INSTALLATION</a></h4>
+                                    </li>
+                                    <li><a href="/services/matte-paint-special/" title="MATTE PAINT SPECIAL"><img width="390"
+                                                height="260" src="/assets/pics/headlight-restoration_2.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                alt="MATTE PAINT SPECIAL" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+                                        <h4 class="box-header"><a href="/services/matte-paint-special/" title="MATTE PAINT SPECIAL">MATTE
+                                                PAINT SPECIAL</a></h4>
+                                    </li>
+                                </div>
                             </ul>
                         </div>
                     </div>
