Added pictures for new service pages(still missing overviews)

--- a/services/auto-body-repair/index.html
+++ b/services/auto-body-repair/index.html
@@ -614,6 +614,13 @@
 			});
 		});
 	</script>
+	<style>
+		@media only screen and (min-width: 600px) {
+			.vc_single_image-img, .wp-post-image {
+				min-height: 350px;
+			  }
+			}
+	</style>
 	<script type='text/javascript' src='/wp-includes/js/jquery/ui/position.min.js?ver=1.11.4'></script>
 	<script type='text/javascript' src='/wp-includes/js/jquery/ui/menu.min.js?ver=1.11.4'></script>
 	<script type='text/javascript' src='/wp-includes/js/jquery/ui/selectmenu.min.js?ver=1.11.4'></script>
