--- a/services/blackout-package/index.html
+++ b/services/blackout-package/index.html
@@ -386,8 +386,8 @@
                     <div class="wpb_single_image wpb_content_element vc_align_left   cs-lightbox">
 
                       <figure class="wpb_wrapper vc_figure">
-                        <a href="/assets/pics/car_dent_small.jpg" target="_self" class="vc_single_image-wrapper   vc_box_border_grey"><img
-                            width="480" height="320" src="/assets/pics/car_dent_small.jpg" class="vc_single_image-img attachment-big-thumb"
+                        <a href="/assets/pics/blackout1.jpg" target="_self" class="vc_single_image-wrapper   vc_box_border_grey"><img
+                            width="480" height="" src="/assets/pics/blackout1.jpg" class="vc_single_image-img attachment-big-thumb"
                             alt="" sizes="(max-width: 480px) 100vw, 480px" /></a>
                       </figure>
                     </div>
@@ -398,8 +398,8 @@
                     <div class="wpb_single_image wpb_content_element vc_align_left   cs-lightbox">
 
                       <figure class="wpb_wrapper vc_figure">
-                        <a href="/assets/pics/car_dent_small_2.jpg" target="_self" class="vc_single_image-wrapper   vc_box_border_grey"><img
-                            width="480" height="320" src="/assets/pics/car_dent_small_2.jpg" class="vc_single_image-img attachment-big-thumb"
+                        <a href="/assets/pics/blackout2.jpg" target="_self" class="vc_single_image-wrapper   vc_box_border_grey"><img
+                            width="480" height="320" src="/assets/pics/blackout2.jpg" class="vc_single_image-img attachment-big-thumb"
                             alt="" sizes="(max-width: 480px) 100vw, 480px" /></a>
                       </figure>
                     </div>
