--- a/services/index.html
+++ b/services/index.html
@@ -381,7 +381,7 @@
                                 </div>
                                 <div class="vc_row wpb_row vc_row-fluid">
                                     <li><a href="/services/auto-painting/" title="AUTO PAINTING"><img width="390"
-                                                height="260" src="/assets/pics/car_painting_3.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                height="260" src="/assets/pics/car_painting_2.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
                                                 alt="AUTO PAINTING" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
                                         <h4 class="box-header"><a href="/services/auto-painting/" title="AUTO PAINTING">AUTO
                                                 PAINTING</a></h4>
@@ -402,19 +402,19 @@
                                 </div>
                                 <div class="vc_row wpb_row vc_row-fluid">
                                     <li><a href="/services/blackout-package/" title="BLACKOUT PACKAGE"><img width="390"
-                                                height="260" src="/assets/pics/car_painting_3.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                height="260" src="/assets/pics/blackout1.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
                                                 alt="BLACKOUT PACKAGE" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
                                         <h4 class="box-header"><a href="/services/blackout-package/" title="BLACKOUT PACKAGE">BLACKOUT
                                                 PACKAGE</a></h4>
                                     </li>
                                     <li><a href="/services/camera-installation/" title="DASH CAM INSTALLATION"><img
-                                                width="390" height="260" src="/assets/pics/auto_detailing.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                width="390" height="260" src="/assets/pics/dashcam2.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
                                                 alt="DASH CAM INSTALLATION" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
                                         <h4 class="box-header"><a href="/services/camera-installation/" title="DASH CAM INSTALLATION">DASH
                                                 CAM INSTALLATION</a></h4>
                                     </li>
                                     <li><a href="/services/matte-paint-special/" title="MATTE PAINT SPECIAL"><img width="390"
-                                                height="260" src="/assets/pics/headlight-restoration_2.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                height="260" src="/assets/pics/matte2.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
                                                 alt="MATTE PAINT SPECIAL" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
                                         <h4 class="box-header"><a href="/services/matte-paint-special/" title="MATTE PAINT SPECIAL">MATTE
                                                 PAINT SPECIAL</a></h4>
@@ -552,6 +552,14 @@
             });
         });
     </script>
+    <style>
+        @media only screen and (min-width: 600px) {
+                    .vc_single_image-img, .wp-post-image {
+                        min-height: 330px;
+                        max-height: 330px;
+                        }
+                    }
+            </style>
     <script type='text/javascript' src='/wp-includes/js/jquery/ui/position.min.js?ver=1.11.4'></script>
     <script type='text/javascript' src='/wp-includes/js/jquery/ui/menu.min.js?ver=1.11.4'></script>
     <script type='text/javascript' src='/wp-includes/js/jquery/ui/selectmenu.min.js?ver=1.11.4'></script>
