--- a/services/matte-paint-special/index.html
+++ b/services/matte-paint-special/index.html
@@ -400,9 +400,9 @@
                                         <div class="wpb_single_image wpb_content_element vc_align_left   cs-lightbox">
 
                                             <figure class="wpb_wrapper vc_figure">
-                                                <a href="/assets/pics/car_dent_small.jpg" target="_self" class="vc_single_image-wrapper   vc_box_border_grey"><img
-                                                        width="480" height="320" src="/assets/pics/car_dent_small.jpg"
-                                                        class="vc_single_image-img attachment-big-thumb" alt="" sizes="(max-width: 480px) 100vw, 480px" /></a>
+                                                <a href="/assets/pics/matte1.jpg" target="_self" class="vc_single_image-wrapper   vc_box_border_grey"><img
+                                                        width="480" height="320" src="/assets/pics/matte1.jpg" class="vc_single_image-img attachment-big-thumb"
+                                                        alt="" sizes="(max-width: 480px) 100vw, 480px" /></a>
                                             </figure>
                                         </div>
                                     </div>
@@ -412,9 +412,9 @@
                                         <div class="wpb_single_image wpb_content_element vc_align_left   cs-lightbox">
 
                                             <figure class="wpb_wrapper vc_figure">
-                                                <a href="/assets/pics/car_dent_small_2.jpg" target="_self" class="vc_single_image-wrapper   vc_box_border_grey"><img
-                                                        width="480" height="320" src="/assets/pics/car_dent_small_2.jpg"
-                                                        class="vc_single_image-img attachment-big-thumb" alt="" sizes="(max-width: 480px) 100vw, 480px" /></a>
+                                                <a href="/assets/pics/matte2.jpg" target="_self" class="vc_single_image-wrapper   vc_box_border_grey"><img
+                                                        width="480" height="320" src="/assets/pics/matte2.jpg" class="vc_single_image-img attachment-big-thumb"
+                                                        alt="" sizes="(max-width: 480px) 100vw, 480px" /></a>
                                             </figure>
                                         </div>
                                     </div>
@@ -577,6 +577,14 @@
             });
         });
     </script>
+    <style>
+        @media only screen and (min-width: 600px) {
+                    .vc_single_image-img, .wp-post-image {
+                        min-height: 250px;
+                        max-height: 250px;
+    \					}
+                    }
+            </style>
     <script type='text/javascript' src='/wp-includes/js/jquery/ui/position.min.js?ver=1.11.4'></script>
     <script type='text/javascript' src='/wp-includes/js/jquery/ui/menu.min.js?ver=1.11.4'></script>
     <script type='text/javascript' src='/wp-includes/js/jquery/ui/selectmenu.min.js?ver=1.11.4'></script>
