--- a/services/camera-installation/index.html
+++ b/services/camera-installation/index.html
@@ -386,8 +386,8 @@
                     <div class="wpb_single_image wpb_content_element vc_align_left   cs-lightbox">
 
                       <figure class="wpb_wrapper vc_figure">
-                        <a href="/assets/pics/car_dent_small.jpg" target="_self" class="vc_single_image-wrapper   vc_box_border_grey"><img
-                            width="480" height="320" src="/assets/pics/car_dent_small.jpg" class="vc_single_image-img attachment-big-thumb"
+                        <a href="/assets/pics/dashcam2.jpg" target="_self" class="vc_single_image-wrapper   vc_box_border_grey"><img
+                            width="480" height="320" src="/assets/pics/dashcam2.jpg" class="vc_single_image-img attachment-big-thumb"
                             alt="" sizes="(max-width: 480px) 100vw, 480px" /></a>
                       </figure>
                     </div>
@@ -398,8 +398,8 @@
                     <div class="wpb_single_image wpb_content_element vc_align_left   cs-lightbox">
 
                       <figure class="wpb_wrapper vc_figure">
-                        <a href="/assets/pics/car_dent_small_2.jpg" target="_self" class="vc_single_image-wrapper   vc_box_border_grey"><img
-                            width="480" height="320" src="/assets/pics/car_dent_small_2.jpg" class="vc_single_image-img attachment-big-thumb"
+                        <a href="/assets/pics/dashcam1.jpg" target="_self" class="vc_single_image-wrapper   vc_box_border_grey"><img
+                            width="480" height="320" src="/assets/pics/dashcam1.jpg" class="vc_single_image-img attachment-big-thumb"
                             alt="" sizes="(max-width: 480px) 100vw, 480px" /></a>
                       </figure>
                     </div>
@@ -565,6 +565,14 @@
       });
     });
   </script>
+  <style>
+    @media only screen and (min-width: 600px) {
+          .vc_single_image-img, .wp-post-image {
+            min-height: 420px;
+            max-height: 420px;
+            }
+          }
+      </style>
   <script type='text/javascript' src='/wp-includes/js/jquery/ui/position.min.js?ver=1.11.4'></script>
   <script type='text/javascript' src='/wp-includes/js/jquery/ui/menu.min.js?ver=1.11.4'></script>
   <script type='text/javascript' src='/wp-includes/js/jquery/ui/selectmenu.min.js?ver=1.11.4'></script>
