Completed new service pages

--- a/index.html
+++ b/index.html
@@ -387,14 +387,14 @@
 												<!-- LAYERS -->
 
 												<!-- LAYER NR. 5 -->
-												<!-- <div class="tp-caption black  " id="slide-2-layer-4" data-x="center" data-hoffset="" data-y="97" data-width="['auto']"
+												<div class="tp-caption black  " id="slide-2-layer-4" data-x="center" data-hoffset="" data-y="97" data-width="['auto']"
 												 data-height="['100']" data-type="text" data-responsive_offset="on" data-responsive="off" data-frames='[{"delay":500,"speed":1200,"frame":"0","from":"y:-40px;opacity:0;","to":"o:1;","ease":"easeInOutExpo"},{"delay":"wait","speed":500,"frame":"999","to":"x:0px;y:0px;opacity:0;","ease":"easeInOutExpo"}]'
 												 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
 												 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 5; max-width: 100px; max-width: 100px; white-space: normal; font-size: 60px; line-height: 60px; font-weight: 900; color: rgba(0,0,0,1); letter-spacing: ;font-family:Arial;">
-													<div class="hexagon">
-														<div class="sl-small-car-fix"></div>
+													<div>
+														<img src="/assets/pics/prestige_logo.png" alt="Prestige motors logo" title="" sizes="(max-width: 270px) 100vw, 270px" />
 													</div>
-												</div> -->
+												</div>
 
 												<!-- LAYER NR. 6 -->
 												<div class="tp-caption black  " id="slide-2-layer-1" data-x="center" data-hoffset="" data-y="262"
@@ -411,8 +411,7 @@
 												 data-frames='[{"delay":1100,"speed":1200,"frame":"0","from":"y:40px;opacity:0;","to":"o:1;","ease":"easeInOutExpo"},{"delay":"wait","speed":500,"frame":"999","to":"x:0px;y:0px;opacity:0;","ease":"easeInOutExpo"}]'
 												 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
 												 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: nowrap; font-size: 60px; line-height: 60px; font-weight: 900; color: rgba(0,0,0,1); letter-spacing: ;font-family:Arial;">
-													<p class="description">We are in the process of converting Prestige Motors in Lake Forest into our 4th
-														AcciDent Pro location!</p>
+													<p class="description"> Now servicing the Lake Forest area under Prestige Auto Body Express.</p>
 												</div>
 
 												<!-- LAYER NR. 8 -->
@@ -1132,6 +1131,14 @@
 			});
 		});
 	</script>
+	<style>
+		@media only screen and (min-width: 600px) {
+                    .vc_single_image-img, .wp-post-image {
+                        min-height: 300px;
+                        max-height: 300px;
+                        }
+                    }
+            </style>
 	<script type='text/javascript' src='/wp-includes/js/jquery/ui/position.min.js?ver=1.11.4'></script>
 	<script type='text/javascript' src='/wp-includes/js/jquery/ui/menu.min.js?ver=1.11.4'></script>
 	<script type='text/javascript' src='/wp-includes/js/jquery/ui/selectmenu.min.js?ver=1.11.4'></script>
