--- a/services/blackout-package/index.html
+++ b/services/blackout-package/index.html
@@ -410,9 +410,13 @@
                 <div class="wpb_column vc_column_container vc_col-sm-12">
                   <div class="wpb_wrapper">
                     <h3 class=" box-header">SERVICE OVERVIEW</h3>
-                    <div class="wpb_text_column wpb_content_element  margin-top-34">
+                    <div class="wpb_text_column wpb_content_element margin-top-34">
                       <div class="wpb_wrapper">
-                        <p></p>
+                        <p>
+                          Add some style to your ride with one of our blackout packages. With options to black out
+                          your wheels, exhaust pipe, and emblems. We can help you make your car stand out from the
+                          norm.
+                        </p>
                       </div>
                     </div>
                     <h3 class=" box-header page-margin-top">PRICING</h3>
