--- a/services/camera-installation/index.html
+++ b/services/camera-installation/index.html
@@ -413,8 +413,9 @@
                     <div class="wpb_text_column wpb_content_element  margin-top-34">
                       <div class="wpb_wrapper">
                         <p>
+                          We are proud become an authorized dealer for Mando Black Box, top of the line automobile
+                          black box manufacturer from Korea. Drive and park your car without any more worries.
                         </p>
-
                       </div>
                     </div>
                     <h3 class=" box-header page-margin-top">PRICING</h3>
