--- a/services/matte-paint-special/index.html
+++ b/services/matte-paint-special/index.html
@@ -427,8 +427,12 @@
                                         <div class="wpb_text_column wpb_content_element  margin-top-34">
                                             <div class="wpb_wrapper">
                                                 <p>
+                                                    Change your car from an average joe look to an impressive bat
+                                                    mobile like appearance.
+                                                    We now offer matte paint special in any color. We do a full
+                                                    dis-assembly
+                                                    to clean and apply the matte finish in any color of your choice.
                                                 </p>
-
                                             </div>
                                         </div>
                                         <h3 class=" box-header page-margin-top">PRICING</h3>
