--- a/appointment-success/index.html
+++ b/appointment-success/index.html
@@ -317,7 +317,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="vc_row wpb_row vc_row-fluid">
+                <div class="vc_row wpb_row vc_row-fluid padding-bottom-66 page-margin-top">
                     <div class="wpb_column vc_column_container vc_col-sm-12">
                         <div class="wpb_wrapper success_msg">
                             <h1>We will follow up with you before your appointment to confirm.</h1>
