--- a/contact-success/index.html
+++ b/contact-success/index.html
@@ -313,7 +313,7 @@
                 <div class="vc_row wpb_row vc_row-fluid page-margin-top">
                     <div class="wpb_column vc_column_container vc_col-sm-12">
                         <div class="wpb_wrapper">
-                            <h2 class=" box-header">MESSAGE SENT</h2>
+                            <h2 class=" box-header">Message Sent!</h2>
                         </div>
                     </div>
                 </div>
