Fixed prestige motors logo

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 												 data-height="['100']" data-type="text" data-responsive_offset="on" data-responsive="off" data-frames='[{"delay":500,"speed":1200,"frame":"0","from":"y:-40px;opacity:0;","to":"o:1;","ease":"easeInOutExpo"},{"delay":"wait","speed":500,"frame":"999","to":"x:0px;y:0px;opacity:0;","ease":"easeInOutExpo"}]'
 												 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
 												 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 5; max-width: 100px; max-width: 100px; white-space: normal; font-size: 60px; line-height: 60px; font-weight: 900; color: rgba(0,0,0,1); letter-spacing: ;font-family:Arial;">
-													<div>
+													<div class='shaped'>
 														<img src="/assets/pics/prestige_logo.png" alt="Prestige motors logo" title="" sizes="(max-width: 270px) 100vw, 270px" />
 													</div>
 												</div>
