--- a/services/headlight-restoration/index.html
+++ b/services/headlight-restoration/index.html
@@ -469,14 +469,17 @@
 						<ul class="list simple margin-top-20 clearfix">
 							<li><span>San Diego:</span>(858) 455-9110</li>
 							<li><span>San Marcos:</span>(760) 688-7330</li>
-							<li><span>Santee:</span>(619) 749-7899</li></br>
+							<li><span>Santee:</span>(619) 749-7899</li>
+							<li><span>Lake Forest:</span>(949) 470-1600</li></br>
 							<li><span style="padding-left:30%;font-weight: bold;">E-mail:</span><a href="mailto:accidentprosusa@gmail.com">AccidentProsUSA@gmail.com</a></li>
 						</ul>
 						<ul class="social-icons gray margin-top-26 clearfix">
-							<li><a target='_blank' href="#" class="social-facebook"></a></li>
-							<li><a target='_blank' href="#" class="social-twitter"></a></li>
-							<li><a target='_blank' href="#" class="social-instagram"></a></li>
-							<li><a target='_blank' href="#" class="social-yelp"></a></li>
+							<li style="background-color: #3b5998;"><a target='_blank' href="https://www.facebook.com/Accidentprossd/" class="socials"><i
+									 class="fab fa-facebook-f"></i></a></li>
+							<li style="background-color: #00aced;"><a target='_blank' href="#" class="socials"><i class="fab fa-twitter"></i></a></li>
+							<li style="background-color: #e95950;"><a target='_blank' href="#" class="socials"><i class="fab fa-instagram"></i></a></li>
+							<li style="background-color: #c41200;"><a target='_blank' href="https://www.yelp.com/biz/accident-pros-san-diego-2?osq=AcciDent+Pros"
+								 class="socials"><i class="fab fa-yelp"></i></a></li>
 						</ul>
 					</div>
 					<div class='vc_col-sm-3 wpb_column vc_column_container widget cs_contact_details_widget'>
