Removed lifetime from footer banner

--- a/about/index.html
+++ b/about/index.html
@@ -362,7 +362,7 @@
                                         repair, paintless dent removal, paint touch up, scratch removal, rim repair,
                                         detailing, and windshield repair among many other services. When you bring your
                                         car to accident pros, you can rest assured your job will be done right. All our
-                                        work comes with a written lifetime guarantee!</p>
+                                        work comes with a written guarantee!</p>
 
                                 </div>
                             </div>
@@ -496,7 +496,7 @@
                     <div class='vc_col-sm-4 wpb_column vc_column_container widget cs_contact_info_widget'>
                         <div class="contact-details-box sl-small-certificate">
                             <p>All Services Backed by<br />
-                                a Written Lifetime Guarantee</p>
+                                a Written Guarantee</p>
                         </div>
                     </div>
                     <div class='vc_col-sm-4 wpb_column vc_column_container widget cs_contact_info_widget'>
