--- a/appointment/index.html
+++ b/appointment/index.html
@@ -606,7 +606,7 @@
                     <div class='vc_col-sm-4 wpb_column vc_column_container widget cs_contact_info_widget'>
                         <div class="contact-details-box sl-small-certificate">
                             <p>All Services Backed by<br />
-                                a Written Lifetime Guarantee</p>
+                                a Written Guarantee</p>
                         </div>
                     </div>
                     <div class='vc_col-sm-4 wpb_column vc_column_container widget cs_contact_info_widget'>
